# oxipress

./: .gitignore  Cargo.toml  README.md  blog.toml  build.sh  vercel.json
api/: search.rs  search_index.json
assets/: search.js  style.css  theme.js
content/: draft-example.md  hello-world.md  why-rust-on-vercel.md
generator/: Cargo.toml
generator/src/: content.rs  main.rs
generator/templates/: base.html  index.html  post.html  tag.html
