[package]
name = "oxipress-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vercel_runtime = "1"
url = "2"

[[bin]]
name = "search"
path = "api/search.rs"

[workspace]
members = [".", "generator"]

[profile.release]
strip = true
lto = true
