[package]
name = "generator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
comrak = { version = "0.53", default-features = false, features = ["syntect-fancy", "shortcodes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
minijinja = "2"
